Removed dead code and a few warnings